
2024-11-18  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c added new functions for multiple window support.
	  also added new static variables to support panel functions
	  and a static array to store information about the panels
	  which have been created.
		cob_sys_window
		check_panel_parm
		cob_update_all_windows
		refresh_mywin
	* common.h: added cob_sys_window
	* system.def: added system library call CBL_GC_WINDOW

2024-10-22  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_screen_get_all): fixed Bug #999
	  directly position to the cursor position within the
	  field according to CURSOR clause

2024-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler): moved call of cob_exit_screen_from_signal
	  from ss_terminate_routines here instead of calling cob_exit_screen
	* common.c (cob_sig_handler, cob_stack_trace_internal,
	  cob_runtime_warning_ss): now using an internal buffer to output data
	  instead of potentially hundreds of small direct writes, output the
	  complete buffer when half-full oir at the end
	* common.c (get_source_location): renamed from output_source_location,
	  now writing to a specified buffer, returning the length, instead of
	  direct write to stderr
	* common.c (output_procedure_stack_entry): use buffer instead of direct
	  write to stderr, now returning the length
	* common.c (write_until_fail, strcat_to_buf, intcat_to_buff): new helper
	  functions
	* common.c (cob_sig_handler): moved call of cob_exit_screen_from_signal
	  from ss_terminate_routines here instead of calling cob_exit_screen
	* common.c (cob_runtime_warning_ss), coblocal.h,
	  fileio.c (cob_exit_fileio_msg_only): changed signature, now returning
	  nonzero if write to stderr wasn't sucessfull
	* common.c (cob_runtime_warning, cob_runtime_warning_external):
	  use all buffered io again
	* common.c (cob_load_config_file): fix format truncation warning by
      explicit checking for it
