@@ -44,9 +44,7 @@ COB_SYSTEM_GEN ("CBL_GET_CURRENT_DIR",	3, 3, cob_sys_get_current_dir)
 COB_SYSTEM_GEN ("CBL_GET_SCR_SIZE",	2, 2, cob_sys_get_scr_size)
 COB_SYSTEM_GEN ("CBL_GC_SCR_DUMP", 1, 1, cob_sys_scr_dump)
 COB_SYSTEM_GEN ("CBL_GC_SCR_RESTORE", 1, 1, cob_sys_scr_restore)
-#ifdef COB_EXPERIMENTAL
 COB_SYSTEM_GEN ("CBL_GC_WINDOW", 1, 1, cob_sys_window)
-#endif
 COB_SYSTEM_GEN ("CBL_IMP",		3, 3, cob_sys_imp)
 COB_SYSTEM_GEN ("CBL_NIMP",		3, 3, cob_sys_nimp)
 COB_SYSTEM_GEN ("CBL_NOR",		3, 3, cob_sys_nor)
